--- a/ioc/multi-context-xml/pom.xml
+++ b/ioc/multi-context-xml/pom.xml
@@ -8,19 +8,11 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>ioc</artifactId>
-    <packaging>pom</packaging>
-
-    <modules>
-        <module>ioc-basic</module>
-        <module>di-xml</module>
-        <module>di-annotation</module>
-        <module>multi-context-xml</module>
-    </modules>
-
     <properties>
         <spring.version>4.2.5.RELEASE</spring.version>
     </properties>
+
+    <artifactId>multi-context-xml</artifactId>
 
     <dependencies>
         <dependency>
